# Bee-Swarm

./: .gitignore  README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/drone_infrared_system/: InfraredSignal.h
devel/include/iris_ir_sitl/: InfraredDetection.h  InfraredSignal.h
devel/lib/offboard_pkg/: offboard_node  wmy_offboard
devel/lib/pkgconfig/: drone_infrared_system.pc  iris_ir_sitl.pc  offboard_pkg.pc  uav_infrared.pc
devel/lib/python2.7/dist-packages/drone_infrared_system/msg/: _InfraredSignal.py  __init__.py
devel/lib/python2.7/dist-packages/iris_ir_sitl/msg/: _InfraredDetection.py  _InfraredSignal.py  __init__.py
devel/share/common-lisp/ros/drone_infrared_system/msg/: InfraredSignal.lisp  _package.lisp  _package_InfraredSignal.lisp  drone_infrared_system-msg.asd
devel/share/common-lisp/ros/iris_ir_sitl/msg/: InfraredDetection.lisp  InfraredSignal.lisp  _package.lisp  _package_InfraredDetection.lisp  (+2 more)
devel/share/drone_infrared_system/cmake/: drone_infrared_system-msg-paths.cmake  drone_infrared_systemConfig.cmake
devel/share/iris_ir_sitl/cmake/: iris_ir_sitl-msg-paths.cmake  iris_ir_sitlConfig.cmake
devel/share/offboard_pkg/cmake/: offboard_pkgConfig.cmake
devel/share/roseus/ros/drone_infrared_system/: manifest.l
devel/share/roseus/ros/iris_ir_sitl/: manifest.l
devel/share/uav_infrared/cmake/: uav_infraredConfig.cmake
src/iris_ir_sitl/: CMakeLists.txt  README.md  package.xml
src/iris_ir_sitl/launch/: iris_ir.launch  multi_uav_mavros_sitl.launch  swarm_formation.launch  wmy_MultiDrone_ir.launch
src/iris_ir_sitl/models/iris_zsj_ir/: iris_zsj_ir.sdf  model.config
src/iris_ir_sitl/scripts/: data_logger.py  infrared_agent.py  planning_agent.py  swarm_launch_generate.py  uav_formation_controller.py  uav_formation_controller_manual.py
src/iris_ir_sitl/scripts/py_backup/: uav_formation_controller.tst2  uav_formation_controller.txt  uav_formation_controller.txt1
src/iris_ir_sitl/shell/: run_formation.sh
src/iris_ir_sitl/src/plugins/: infrared_emitter_plugin.cpp  infrared_receiver_plugin.cpp
src/iris_ir_sitl/src/src_backup/: infrared_receiver_plugin.txt  infrared_receiver_plugin2.txt
src/offboard_pkg/: CMakeLists.txt
src/offboard_pkg/src/: offboard_node.cpp
(+8 files in other folders)
